[package]
name = "issues-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.8.4"
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]
solana-program-test = "1.9.5"
solana-sdk = "1.9.5"

[lib]
name = "issues"
crate-type = ["cdylib", "lib"]